--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "irazasyed/telegram-bot-sdk": "^3.9",
         "laravel/framework": "^9.35.1",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
